# hf-plugin-git

./: README.md  manifest.json
.github/workflows/: plugin-release.yml
app/: GitPanel.tsx  i18n.ts  index.tsx  package-lock.json  package.json  theme.css  vite.config.ts
backend/: Cargo.toml
backend/src/: commands.rs  lib.rs  workflow_steps.rs
