[package]
name = "hf-plugin-git"
version = "1.2.4"
edition = "2021"
description = "HaloForge built-in Git Integration plugin (backend)"

[lib]
name = "hf_plugin_git"
# cdylib = loaded at runtime by PluginManager
# rlib   = for unit tests
crate-type = ["cdylib", "rlib"]

[dependencies]
hf-plugin-api = { package = "haloforge-plugin-api", version = "0.2.13" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"

[workspace]
